# mpiwrap

./: .gitignore  aclocal.m4  configure  configure.ac  mpiwrap.hpp  mpiwrap_comm.hpp  mpiwrap_common.hpp  mpiwrap_datatype.hpp  mpiwrap_group.hpp  mpiwrap_intercomm.hpp  mpiwrap_intracomm.hpp  mpiwrap_message.hpp  mpiwrap_request.hpp  mpiwrap_status.hpp  mpiwrap_window.hpp
include/: mpiwrap.hpp.in
include/internal/: mpiwrap_comm.hpp  mpiwrap_common.hpp  mpiwrap_datatype.hpp  mpiwrap_group.hpp  mpiwrap_info.hpp  mpiwrap_intercomm.hpp  mpiwrap_intracomm.hpp  mpiwrap_message.hpp  mpiwrap_request.hpp  mpiwrap_window.hpp
internal/: mpiwrap_collective.hpp  mpiwrap_p2p.hpp  mpiwrap_scan.hpp
